--- a/public/assets/css/rooms.css
+++ b/public/assets/css/rooms.css
@@ -28,7 +28,7 @@ body {
   border-radius: 50px 50px 0px 0px;
 }
 
-#manyuser {
+#roomlist {
   text-align: center;
   width: 40%;
   height: 40rem;
@@ -49,7 +49,7 @@ body {
   text-align: center;
   font-size: 20px;
   width: 80px;
-  background-color: #1A78D1;
+  background-color: #CCCCCC;
   margin-left: 70% ;
   border-radius: 50px 50px 50px 50px;
 }
@@ -59,7 +59,7 @@ body {
   text-align: center;
   font-size: 20px;
   width: 80px;
-  background-color: #CCCCCC;
+  background-color: #1A78D1;
   margin-left: 80% ;
   border-radius: 50px 50px 50px 50px;
 }
